--- a/ms-deployment/docker-compose.yml
+++ b/ms-deployment/docker-compose.yml
@@ -18,9 +18,9 @@ services:
 
 
   service-node-1:
-    image: yonghai/2rings:0.0.1
+    image: yonghai/project2-vue-material-kit-master:1.0.0
     ports:
-      - 6002:80
+      - 6002:4173
     deploy:
       mode: global
       #replicas: 1
